--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,21 @@
             <version>${scala.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-actor_${scala.compat.version}</artifactId>
+            <version>2.4.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-http-experimental_${scala.compat.version}</artifactId>
+            <version>2.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest_${scala.compat.version}</artifactId>
+            <version>3.0.0-M15</version>
+        </dependency>
+        <dependency>
             <groupId>xyz.discretezoo.snauty</groupId>
             <artifactId>snauty</artifactId>
             <version>1.0-SNAPSHOT</version>
